# spec-maestro

./: .gitignore  AGENTS.md  CLAUDE.md  QUICKSTART.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.beads/: daemon-error  issues.jsonl
.claude/commands/: maestro.analyze.md  maestro.clarify.md  maestro.commit.md  maestro.diff.md  maestro.implement.md  maestro.plan.md  maestro.research.list.md  maestro.research.md  maestro.respond.md  maestro.review.md  maestro.specify.md  maestro.tasks.md
.codex/commands/: maestro.clarify.md  maestro.commit.md  maestro.fork.md  maestro.implement.md  maestro.list.md  maestro.plan.md  maestro.research.md  maestro.research.search.md  maestro.respond.md  maestro.specify.md
.github/workflows/: ci.yml  release.yml  smoke-test.yml
.maestro/: __init__.py  config.yaml  constitution.md
.maestro/commands/: maestro.clarify.md  (+9 more)
benchmark/: README.md  RESULTS-TEMPLATE.md
e2e/: README.md  kanban-board.spec.ts  tsconfig.json
plans/: maestro-phase0.md
scripts/: update-maestro.sh
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: events.rs  health.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/bd/: activity.rs  client.rs  daemon.rs  error.rs  mod.rs  types.rs  workspace.rs
src-tauri/src/cache/: beads_cache.rs  dag.rs  mod.rs
src-tauri/src/commands/: bd_commands.rs  health_commands.rs  mod.rs
src-tauri/tests/fixtures/: test_epics.json  test_gates.json  test_issues.json
tests/: __init__.py
(+311 files in other folders)
