[package]
name = "agent-maestro"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_maestro"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri Core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-http = "2"
tauri-plugin-notification = "2"

# Testing utilities (needed for integration test helpers)
tempfile = "3"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Stream Utilities
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# SSE Client
eventsource-client = "0.13"

# File Watching
notify = "8"

# Error Handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
which = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
mockito = "1"
tempfile = "3"
tokio-test = "0.4"
